# reinvent-concierge

./: .gitignore
backend/: Dockerfile  main.py  pyproject.toml
docs/: README.md  architecture.md  deploy.md  dev-notes.md  project.md  reference-code-analysis.md  strands-agentcore-guide.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx
